display fuction added

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <nav></nav>
         <div id = "board">
-            <div class = "tile">2</div>
+            <div class = "tile"></div>
             <div class = "tile"></div>
             <div class = "tile"></div>
             <div class = "tile"></div>
